--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,8 @@ footer{
 
 
 .xxs{
-    width: 50px;
     height: 25px;
-    background-color: lime;
+    padding-bottom: 50px;
 
 }
 .small{
@@ -100,6 +99,7 @@ h1{
     width: 100%;
     min-height: 500px;
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .xxlarge h1{
@@ -127,7 +127,7 @@ ul{
     list-style-type: none;
 }
 
-li{
+.nav li{
     display: inline;
 }
 a{
@@ -170,7 +170,6 @@ a{
     display: flex;
     justify-content: center;
     justify-content: space-between;
-    background-color: turquoise;
 }
 
 /* Jumbotron Section */
@@ -220,6 +219,7 @@ color: white;
 .med img{
     width: 25px;
     display: inline-block;
+    vertical-align: middle;
 }
 
 .xxlarge p{
@@ -230,4 +230,46 @@ color: white;
 .med p{
     display: inline-block;
     color: white;
+    vertical-align: middle;
+    
+}
+
+
+.fa-brands{
+    padding-top: 20px;
+    padding-right: 10px;
+    color: white;
+}
+
+.small h4{
+    text-align: left;
+    color: #8EA1E1;
+}
+
+
+.footer-info li{
+    text-align: left;
+    line-height: 25px;
+}
+
+.large{
+    padding-top: 40px;
+}
+
+.separator{
+    border: 1px solid #8EA1E1;
+}
+
+
+.bottom-separator{
+    padding-top: 25px;
+    background-color:#23272A;
+}
+
+.register{
+    color: white;
+    background-color: #8EA1E1;  
+    border: 1px solid transparent;
+    border-radius: 30px;    
+    padding: 10px 20px;
 }
